--- a/templates/index.html
+++ b/templates/index.html
@@ -392,6 +392,7 @@
             Download our free app and access over 300,000 rental properties from
             your phone.
           </p>
+          <h1>hello world</h1>
           <a href="" class="button">
             <img src="{% static 'images/appstore.svg' %}" alt="appstore" />
             App Store
