added subheader to project

--- a/templates/index.html
+++ b/templates/index.html
@@ -393,6 +393,7 @@
             your phone.
           </p>
           <h1>hello world</h1>
+          <h2>Welcome to patch Everyone</h2>
           <a href="" class="button">
             <img src="{% static 'images/appstore.svg' %}" alt="appstore" />
             App Store
